change remove button position and fix links color on safari

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,6 @@ img {
 .close-btn {
     
     grid-area: 1 / 1 /2 / 2;
-    margin: 5px;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -116,7 +115,6 @@ img {
     grid-area: 2 / 2 / 3 / 3;
     align-self: center ;
     row-gap: 0;
-    z-index: 1;
 }
 .book-author {
     grid-area: 2 / 3 / 3 / 4;
@@ -246,6 +244,7 @@ footer {
 }
 a:link {
     text-decoration: none;
+    color: bisque;
 }
 a:visited {
     color: bisque;
